# dearxan

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/scripts/: build_dist_archive.py  package_version.py  release_notes.py
.github/workflows/: ci.yml  release-preview.yml  release.yml
examples/: analysis.rs
include/: dearxan.h
src/: lib.rs  patch.rs  patcher.rs  test_util.rs
src/analysis/: cfg.rs  encryption.rs  entry_point.rs  mod.rs  stub_info.rs  util.rs
src/analysis/ssa/: assembler.rs  intrusive_ilist.rs  ir.rs  ir_.rs  lifter.rs  mod.rs  optimizer.rs  stack_vec.rs  state.rs  test.rs  util.rs
src/analysis/symbolic/: executor.rs  expr.rs  memory.rs  mod.rs  registers.rs  ssa.rs
src/analysis/vm/: image.rs  memory.rs  mod.rs  registers.rs  util.rs
src/disabler/: call_hook.rs  code_buffer.rs  common.rs  entry_point.rs  ffi.rs  game.rs  game_specific.rs  lazy_global.rs  mod.rs  result.rs  slist.rs  steamstub.rs  util.rs
test_dll/: Cargo.toml
test_dll/src/: lib.rs
test_launcher/: Cargo.toml
test_launcher/src/: main.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
