[workspace]
resolver = "2"

[workspace.package]
authors = ["William Tremblay"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tremwil/dearxan"

[workspace.dependencies]
log = "0.4"
simplelog = "0.12.2"

[workspace.dependencies.windows]
version = "0.61.3"
features = [
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Console"
]

[package]
name = "dearxan"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Static analysis and patcher for the Arxan obfuscator as found in FromSoftware titles"
version = "0.1.0"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
disabler = ["dep:closure-ffi", "dep:windows"]
ffi = ["disabler"]
disabler-debug = ["disabler"]

[dependencies]
log.workspace = true
simplelog.workspace = true
windows = { workspace = true, optional = true }
pelite = { version = "0.10" }
iced-x86 = "1.21"
memchr = "2.7.4"
fxhash = "0.2.1"
indexmap = "2.7.1"
bitvec = "1.0"
bytemuck = "1.22"
regex = { version = "1.11.1", default-features = false, features = [ "perf", "std" ]}
bitfield-struct = "0.11.0"
rayon = { version = "1.10", optional = true }

[dependencies.closure-ffi]
version = "3.0"
optional = true
default-features = false

[dev-dependencies]
iced-x86 = { version = "1.21", features = ["code_asm"] }
pretty-hex = "0.4.1"

[profile.release]
opt-level = 3
codegen-units = 1

[package.metadata.docs.rs]
features = ["ffi", "disabler-debug", "rayon"]
default-target = "x86_64-pc-windows-msvc"
rustdoc-args = ["--cfg", "docsrs"]