[package]
name = "dearxan-launcher"
description = "simple launcher to inject dearxan-dll in FromSoftware games"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
simplelog.workspace = true
dll-syringe = "0.17"
dotenvy_macro = "0.15"
steamlocate = "2.0"
clap = { version = "4.5.32", features = ["derive"] }
walkdir = "2.5"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_System_Threading"
]