[package]
name = "dearxan-test-utils"
description = "Utilities for dearxan's integration tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pelite.workspace = true
log.workspace = true
simplelog.workspace = true